src/test/ui/issues/issue-13404.stderr
error[E0432]: unresolved import `b::f`
  --> $DIR/issue-13404.rs:2:5
   |
LL | use b::f; //~ ERROR: unresolved import `b::f` [E0432]
   |     ^^^^ no `f` in `b`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
